--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -296,7 +296,6 @@ html {
 }
 
 .formName {
-  width: 20%;
   display: flex;
   flex-direction: column;
   margin: auto;
@@ -304,13 +303,17 @@ html {
 
 .inputName {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
   padding-bottom: 1rem;
+}
+
+.inputName label {
+  padding-right: 1rem;
 }
 
 .buttonEditName {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
   gap: 1rem;
   padding-top: 1.5rem;
 }
