creation du formulaire et creation de la modification du userName

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -320,3 +320,9 @@ html {
 .buttonForm {
   padding: 10px 42px;
 }
+
+.inputReadOnly {
+  background-color: #ccc;
+  color:#454545;
+  cursor: not-allowed;
+}
